Utiliza caminho relativos corretos para o favicon e ícone do gmail

--- a/certificado.html
+++ b/certificado.html
@@ -6,7 +6,7 @@
 
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Montserrat&display=swap" rel="stylesheet">
-		<link rel="shortcut icon" type="image/svg" href="Imagens/material/favicon.svg">
+		<link rel="shortcut icon" type="image/svg" href="material/favicon.svg">
 
 		<title>Certificado ALura</title>
 		<style>
@@ -135,7 +135,7 @@
 					<img src="https://image.flaticon.com/icons/png/512/25/25231.png" class="logo" alt="Logo do GitHub" />
 					<a href="https://github.com/Laisses">github.com/Laisses</a>
 					<br />
-					<img src="Imagens/material/gmail-logo.png" class="icone" alt="Ícone do Gmail"/>
+					<img src="material/gmail-logo.png" class="icone" alt="Ícone do Gmail"/>
 					<a href="mailto:laisse@gmail.com">laisse@gmail.com</a>
 				</div>
 			</header>
