--- a/certificado.html
+++ b/certificado.html
@@ -149,13 +149,13 @@
 						<li>🎬 Aluraflix</li>
 						<li>🏆 Tabela de Classificação</li>
 						<li>🃏 Supertrunfo</li>
-						<li>🌐 Certificard</li>
+						<li>🌐 <a href="https://laisses.github.io/projetos/certificado.html">Certificard</a></li>
 					</ul>
 			</div>
 
 			<div class="alura">	
 				<p>
-				Curso promovido por <a href="https://www.alura.com.br/"><img src="https://pbs.twimg.com/profile_images/1333609520849969161/hrA0M5ZG.jpg" class="logo-alura" alt="Logo da Alura"></a><a href="https://www.alura.com.br/">Alura</a>.
+				Curso promovido por <a href="https://www.alura.com.br/"><img src="https://pbs.twimg.com/profile_images/1333609520849969161/hrA0M5ZG.jpg" class="logo-alura" alt="Logo da Alura" />Alura</a>.
 				</p>
 			</div>
 		</section>
