move certificado.html -> index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						<li>🎬 Aluraflix</li>
 						<li>🏆 Tabela de Classificação</li>
 						<li>🃏 Supertrunfo</li>
-						<li>🌐 <a href="https://laisses.github.io/projetos/certificado.html">Certificard</a></li>
+						<li>🌐 <a href="https://laisses.github.io/projetos/">Certificard</a></li>
 					</ul>
 			</div>
 
