cria um link no ditato polular para o certificard

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		<section>
 			
 			<header>
-				<img src="https://icons.iconarchive.com/icons/elegantthemes/beautiful-flat-one-color/128/dev-icon.png" class="foto" alt="imagem de uma tag html fechada." />
+				<img src="material/dev-icon.png" class="foto" alt="imagem de uma tag html fechada." />
 
 				<div class="info">
 					<h1>Laísse Lima</h1>				 
