--- a/ditado-popular.html
+++ b/ditado-popular.html
@@ -111,6 +111,32 @@
 				font-size: 25px;
 			}
 
+			a:link, a:visited {
+			  text-decoration: none;
+			  color: #d1cbcb;
+			}
+
+			a:hover, a:active {
+			  color: #d1cbcb;
+			  font-weight: bold;
+			}
+
+			.foto {
+				width: 25px;
+				vertical-align: top;
+				margin-right: 5px;
+			}
+
+			footer {
+				font-size: 20px;
+				font-style: bold;
+				position: absolute;
+				bottom: 10px;
+				right: 10px;
+				background-color: rgba(38, 14, 14, 0.5);
+				padding: 5px;				
+			}
+
 		</style>
 
 	</head>
@@ -141,6 +167,9 @@
 				</button>
 
 			</main>
+			<footer>
+				<a href="https://laisses.github.io/projetos/"><img src="material/dev-icon.png" class="foto" alt="imagem de uma tag html fechada." />Certificard</a>
+			</footer>
 		</section>		
 
 	  <script>
