cria um link no index para o projeto ditado-popular

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					<ul>
 						<li>💰 Conversor de Moedas</li>
 						<li>🔢 Calculadora</li>
-						<li>🔮 Mentalista</li>
+						<li>🔮 <a href="https://laisses.github.io/projetos/ditado-popular.html">Mentalista</a></li>
 						<li>🎬 Aluraflix</li>
 						<li>🏆 Tabela de Classificação</li>
 						<li>🃏 Supertrunfo</li>
