Adiciona versão final do conversor de moedas

--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
 			<div class="insignias">
 				<h2>Insígnias da Imersão.dev</h2>
 					<ul>
-						<li>💰 Conversor de Moedas</li>
+						<li>💰 <a href="conversor-viagem.html">Conversor de Moedas</a></li>
 						<li>🔢 Calculadora</li>
-						<li>🔮 <a href="https://laisses.github.io/projetos/ditado-popular.html">Mentalista</a></li>
+						<li>🔮 <a href="ditado-popular.html">Mentalista</a></li>
 						<li>🎬 Aluraflix</li>
 						<li>🏆 Tabela de Classificação</li>
 						<li>🃏 Supertrunfo</li>
-						<li>🌐 <a href="https://laisses.github.io/projetos/">Certificard</a></li>
+						<li>🌐 <a href="index.html">Certificard</a></li>
 					</ul>
 			</div>
 
