adiciona o link do projeto cubo magico no certificard

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 						<li>🔢 Calculadora</li>
 						<li>🔮 <a href="ditado-popular.html">Mentalista</a></li>
 						<li>🎬 Aluraflix</li>
-						<li>🏆 Tabela de Classificação</li>
+						<li>🏆 Tabela de Classificação <a href="classificacao-cubo-magico.html"></li>
 						<li>🃏 Supertrunfo</li>
 						<li>🌐 <a href="index.html">Certificard</a></li>
 					</ul>
