--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						<li>🎬 Aluraflix</li>
 						<li>🏆 <a href="classificacao-cubo-magico.html">Tabela de Classificação</a></li>
 						<li>🃏 Supertrunfo</li>
-						<li>🌐 <a href="index.html">Certificard</li>
+						<li>🌐 <a href="index.html">Certificard</a></li>
 					</ul>
 			</div>
 
