adiciona o link do projeto calculadora no certificard

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<h2>Insígnias da Imersão.dev</h2>
 					<ul>
 						<li>💰 <a href="conversor-viagem.html">Conversor de Moedas</a></li>
-						<li>🔢 Calculadora</li>
+						<li>🔢 <a href="calculadora.html">Calculadora</a></li>
 						<li>🔮 <a href="ditado-popular.html">Mentalista</a></li>
 						<li>🎬 Aluraflix</li>
 						<li>🏆 <a href="classificacao-cubo-magico.html">Tabela de Classificação</a></li>
