--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						<li>💰 <a href="conversor-viagem.html">Conversor de Moedas</a></li>
 						<li>🔢 <a href="calculadora.html">Calculadora</a></li>
 						<li>🔮 <a href="ditado-popular.html">Mentalista</a></li>
-						<li>🎬 Aluraflix</li>
+						<li>🎬 <a href="tecflix.html">Aluraflix</a></li>
 						<li>🏆 <a href="classificacao-cubo-magico.html">Tabela de Classificação</a></li>
 						<li>🃏 Supertrunfo</li>
 						<li>🌐 <a href="index.html">Certificard</a></li>
