Adiciona fonte para o Trunfo do Anel

--- a/trunfo-do-anel.html
+++ b/trunfo-do-anel.html
@@ -30,7 +30,7 @@
 			
 			@font-face {
 				font-family: Elvish Ring NFI;
-				src: url(ElvishRingNfi-wMJz.ttf);
+				src: url("material/fontes/elvish-ring-nfi-font/ElvishRingNfi-wMJz.ttf");
 			}
 
 			body {
