Adiciona o Trunfo do Anel no Certificard

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						<li>🔮 <a href="ditado-popular.html">Mentalista</a></li>
 						<li>🎬 <a href="tecflix.html">Aluraflix</a></li>
 						<li>🏆 <a href="classificacao-cubo-magico.html">Tabela de Classificação</a></li>
-						<li>🃏 Supertrunfo</li>
+						<li>🃏 <a href="trunfo-do-anel.html">Supertrunfo</a></li>
 						<li>🌐 <a href="index.html">Certificard</a></li>
 					</ul>
 			</div>
