Adiciona mais um item na lista de tarefas do Trunfo do Anel

--- a/trunfo-do-anel.html
+++ b/trunfo-do-anel.html
@@ -311,6 +311,7 @@
 				- [ ] colocar botões de sortear entre as cartas
 				- [ ] juntar variáveis das cartas em uma variável só
 				- [ ] botão de próxima rodada
+				- [ ] adicionar link para o certificard
 			*/
 
 			// Animação do header
