Separa CSS e JavaScript do ditado-popular.html

--- a/ditado-popular.html
+++ b/ditado-popular.html
@@ -13,133 +13,7 @@
 
 		<title>Ditados Populares</title>
 
-		<style>
-			body {								background: linear-gradient(0deg, rgba(255,255,255,0) 0%,
-              rgba(255,255,255,0.5)), url("material/book-library-with-open-textbook.png");
-				background-size: auto;
-				background-repeat: no-repeat;
-				background-color: #120a38;
-				background-position: center top;
-				text-align: center;
-				font-family: 'Indie Flower', cursive;
-				color: #151033;
-			}		
-
-			section h1 {
-				font-size: 40px;					
-				margin-left: auto;
-				margin-right: auto;
-				display: block;
-				margin-bottom: 10px;
-			}
-
-			section h2 {
-				font-size: 30px;
-				margin-top: 5px;
-			}
-
-			section p {
-				font-weight: normal;
-				font-size: 25px;
-			}
-
-			main {
-				font-family: 'Raleway', sans-serif;
-			}
-
-			.btnIniciar {
-				width: 15%;
-				padding: 10px;
-			}
-
-			q {
-				display: block;
-				margin: 10px;
-				font-size: 25px;
-				padding-bottom: 10px;
-			}
-
-			.chute {
-				display: block;
-				margin-left: auto;
-				margin-right: auto;
-				margin-bottom: 10px;
-			}
-
-			input {
-				border-radius: 5px;
-				background-color: #c4b3b3;
-				padding: 5px;
-			}
-
-			input:focus {
-				outline: none;
-  				box-shadow: 0 0 0 2px #464160;
-			}
-
-			.botao {
-				border: none;
-				border-radius: 5px;
-				font-size: 14px;
-				font-weight: bold;
-				padding: 15px;
-				width: 20%;
-				background-color: #8c6f6f;
-				color: #ffffff;
-				transition: 0.8s background-color;
-				cursor: pointer;
-				margin: 10px 5px;
-				outline: none;
-			}
-
-			.botao:hover, .botao:active {
-  			background-color: #5c4147;
-			}
-
-			.botao:active {
-				box-shadow: 0 0 0 2px #5c4147;
-			}
-
-			#btnResponder {
-				display: block;
-				margin-left: auto;
-				margin-right: auto;
-				margin-top: 20px;
-			}
-
-			#resultado {
-				background-color: rgba(255,192,203, 0.4);
-				font-size: 25px;
-			}
-
-			a:link, a:visited {
-			  text-decoration: none;
-			  color: #d1cbcb;
-			}
-
-			a:hover, a:active {
-			  color: #d1cbcb;
-			  font-weight: bold;
-			}
-
-			.foto {
-				width: 25px;
-				vertical-align: top;
-				margin-right: 5px;
-			}
-
-			footer {
-				font-size: 20px;
-				font-style: bold;
-				position: absolute;
-				bottom: 10px;
-				right: 10px;
-				background-color: rgba(38, 14, 14, 0.5);
-				padding: 5px;				
-			}
-
-		</style>
-
+		<link rel="stylesheet" href="ditado-popular.css" />
 	</head>
 
 	<body>
@@ -172,270 +46,7 @@
 				<a href="https://laisses.github.io/projetos/"><img src="material/dev-icon.png" class="foto" alt="imagem de uma tag html fechada." />Certificard</a>
 			</footer>
 		</section>		
-
-	  <script>
-			var ditados = [
-				{
-					frase: "Vão-se os anéis, ficam os ",
-					resposta: "dedos"
-				},
-				{
-					frase: "Água mole, pedra dura, tanto bate até que ",
-					resposta: "fura"
-				},
-				{
-					frase: "A pressa é a inimiga da ",
-					resposta: "perfeição"
-				},
-				{
-					frase: "À noite todos os gatos são ",
-					resposta: "pardos"
-				},
-				{
-					frase: "Antes só do que mal ",
-					resposta: "acompanhado"
-				},
-				{
-					frase: "Antes tarde do que ",
-					resposta: "nunca"
-				},
-				{
-					frase: "Boca calada não entra ",
-					resposta: "mosca"
-				},
-				{
-					frase: "Cada macaco no seu ",
-					resposta: "galho"
-				},
-				{
-					frase: "Caiu na rede, é ",
-					resposta: "peixe"
-				},
-				{
-					frase: "Casa de ferreiro, espeto de ",
-					resposta: "pau"
-				},
-				{
-					frase: "Cachorro que late não ",
-					resposta: "morde"
-				},
-				{
-					frase: "Cavalo dado não se olha os ",
-					resposta: "dentes"
-				},
-				{
-					frase: "Dai a César o que é de ",
-					resposta: "César"
-				},
-				{
-					frase: "De grão em grão, a galinha enche o ",
-					resposta: "papo"
-				},
-				{
-					frase: "De médico e de louco todo mundo tem um ",
-					resposta: "pouco"
-				},
-				{
-					frase: "Deus ajuda quem cedo ",
-					resposta: "madruga"
-				},
-				{
-					frase: "Deus escreve certo por linhas ",
-					resposta: "tortas"
-				},
-				{
-					frase: "Diz-me com quem andas e eu te direi quem ",
-					resposta: "és"
-				},
-				{
-					frase: "Em terra de cego quem tem olho é ",
-					resposta: "rei"
-				},
-				{
-					frase: "É melhor prevenir do que ",
-					resposta: "remediar"
-				},
-				{
-					frase: "Gato escaldado tem medo de água ",
-					resposta: "fria"
-				},
-				{
-					frase: "Ladrão que rouba ladrão tem cem anos de ",
-					resposta: "perdão"
-				},
-				{
-					frase: "Mente vazia, oficina do ",
-					resposta: "diabo"
-				},
-				{
-					frase: "Não adianta chorar pelo leite ",
-					resposta: "derramado"
-				},
-				{
-					frase: "Não confunda alhos com ",
-					resposta: "bugalhos"
-				},
-				{
-					frase: "Não deixe para amanhã o que você pode fazer ",
-					resposta: "hoje"
-				},
-				{
-					frase: "Nem tudo o que brilha é ",
-					resposta: "ouro"
-				},
-				{
-					frase: "Onde Judas perdeu as ",
-					resposta: "botas"
-				},
-				{
-					frase: "O barato sai ",
-					resposta: "caro"
-				},
-				{
-					frase: "O que é do homem o bicho não ",
-					resposta: "come"
-				},
-				{
-					frase: "O que os olhos não veem, o coração não ",
-					resposta: "sente"
-				},
-				{
-					frase: "Onde há fumaça há ",
-					resposta: "fogo"
-				},
-				{
-					frase: "Para bom entendedor, meia palavra ",
-					resposta: "basta"
-				},
-				{
-					frase: "Pimenta nos olhos dos outros é ",
-					resposta: "refresco"
-				},
-				{
-					frase: "Panela velha é que faz comida ",
-					resposta: "boa"
-				},
-				{
-					frase: "Quem canta seus males ",
-					resposta: "espanta"
-				},
-				{
-					frase: "Quem não tem cão, caça com ",
-					resposta: "gato"
-				},
-				{
-					frase: "Quem pode, pode; quem não pode, se ",
-					resposta: "sacode"
-				},
-				{
-					frase: "Quem semeia vento, colhe ",
-					resposta: "tempestade"
-				},
-				{
-					frase: "Quem fala o que quer ouve o que não ",
-					resposta: "quer"
-				},
-				{
-					frase: "Quando a esmola é demais o santo ",
-					resposta: "desconfia"
-				},
-				{
-					frase: "Quem não arrisca não ",
-					resposta: "petisca"
-				},
-				{
-					frase: "Rir é o melhor ",
-					resposta: "remédio"
-				},
-				{
-					frase: "Saco vazio não para em ",
-					resposta: "pé"
-				},
-				{
-					frase: "Todos os caminhos levam a ",
-					resposta: "Roma"
-				},
-				{
-					frase: "Uma andorinha sozinha não faz ",
-					resposta: "verão"
-				}
-			];
-	
-			var ditadoSorteado;
-			var acertos = 0;
-			var totalDitados = ditados.length;
-			var enter = 13;
-	
-			function sorteio() {
-				return ditados[Math.floor(Math.random() * ditados.length)];
-			}
-	
-			function sortearDitado() {
-				ditadoSorteado = sorteio();
-				document.querySelector("#ditado").innerHTML = ditadoSorteado.frase;
-			}
-
-			function tiraAcentos(s) {
-				return s
-					.toLowerCase()
-					.replaceAll(":", "")
-					.replaceAll(".", "")
-					.replaceAll(",", "")
-					.replaceAll("-", "")
-					.replaceAll("á", "a")
-					.replaceAll("ã", "a")
-					.replaceAll("à", "a")
-					.replaceAll("é", "e")
-					.replaceAll("ê", "e")
-					.replaceAll("í", "i")
-					.replaceAll("ó", "o")
-					.replaceAll("ô", "o")
-					.replaceAll("ú", "u")
-					.replaceAll("ü", "u")
-					.replaceAll("ç", "c");
-			}
-	
-			function confereResposta() {
-				var resposta = document.querySelector("#chute").value;
-				var tagResultado = document.querySelector("#resultado");
-	
-				if (tiraAcentos(resposta) === tiraAcentos(ditadoSorteado.resposta)) {
-					tagResultado.innerHTML = "Correto!";				
-					acertos++;
-				} else if (resposta === "") {
-					alert("Faltou digitar a resposta.");
-				} else {
-					tagResultado.innerHTML = "Oooooops! Não foi dessa vez!";				
-				}
-			}
-	
-			function proximo() {
-				ditados = ditados.filter(function(ditado) {
-					return ditado !== ditadoSorteado;
-				});
-				if (ditados.length === 0) {
-					document.querySelector("#resultado").innerHTML = "Os ditados terminaram. Parabéns! Você acertou " + acertos + "/" + totalDitados + ".";
-					return;
-				}
-				sortearDitado();
-				document.querySelector("#chute").value = "";
-				document.querySelector("#resultado").innerHTML = "";
-			}
-
-			function apertaEnter (event) {
-				if (event.keyCode == enter) {
-					confereResposta();
-				}
-			}
-
-			document.onkeydown = apertaEnter;
-		
-			sortearDitado();
-			document.querySelector("#btnResponder").onclick = confereResposta;
-			document.querySelector("#btnPular").onclick = proximo;
-			document.querySelector("#btnProximo").onclick = proximo;
-
-	  </script>
+		<script src="ditado-popular.js"></script>
 	</body>
 </html>
 
