--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 
 		<link rel="stylesheet" href="certificard.css" />
 
-		<title>Certificado ALura</title>		
+		<title>Certificado ALura</title>
 	</head>
 	<body>
 
 		<section>
-			
+
 			<header>
 				<img src="material/dev-icon.png" class="foto" alt="imagem de uma tag html fechada." />
 
 				<div class="info">
-					<h1>Laísse Lima</h1>				 
-					<img src="https://image.flaticon.com/icons/png/512/25/25231.png" class="logo" alt="Logo do GitHub" />
+					<h1>Laísse Lima</h1>
+					<img src="./material/github.png" class="logo" alt="Logo do GitHub" />
 					<a href="https://github.com/Laisses">github.com/Laisses</a>
 					<br />
 					<img src="material/gmail-logo.png" class="icone" alt="Ícone do Gmail"/>
 					<a href="mailto:laisse@gmail.com">laisse@gmail.com</a>
 				</div>
 			</header>
-		
+
 			<div class="insignias">
 				<h2>Insígnias da Imersão.dev</h2>
 					<ul>
@@ -42,13 +42,13 @@
 					</ul>
 			</div>
 
-			<div class="alura">	
+			<div class="alura">
 				<p>
-				Curso promovido por <a href="https://www.alura.com.br/"><img src="https://pbs.twimg.com/profile_images/1333609520849969161/hrA0M5ZG.jpg" class="logo-alura" alt="Logo da Alura" />Alura</a>.
+				Curso promovido por <a href="https://www.alura.com.br/"><img src="./material/alura.png" class="logo-alura" alt="Logo da Alura" />Alura</a>.
 				</p>
 			</div>
 		</section>
-		
+
 	</body>
 
 
